Fix spacing in main menu

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,600&display=swap');
 
-
 .carousel-indicators li {
   width: 1.2vw !important;
   height: 1.2vw !important;
@@ -21,7 +20,7 @@
 
 .logotipo {
   margin-left: 30px;
-  padding: 0px !important;
+  padding: 0px;
 }
 
 .fa-facebook {
@@ -42,6 +41,10 @@
   border: none !important;
 }
 
+.navbar-toggler-icon {
+  font-size: 25px !important;
+}
+
 .btn-main {
   width: 200px;
   font-weight: 700 !important;
@@ -53,11 +56,23 @@
 
 @media (max-width: 991px) {
 
+  //
+  // .navbar-toggler-icon {
+  //   margin-top: 10px;
+  // }
+
+  .navbar-toggler-icon {
+    padding: 5px 0;
+  }
+
   .logotipo {
-    position: relative;
+    position: absolute;
     left: 45%;
-    margin-left: -50px !important;  /* 50% of your logo width */
+    // transform: translateX(-50%);
+    top: -9px;
     display: block;
+    margin-left: -50px !important;
+    padding: 10px 0 !important;
   }
 
   .navbar-collapse {
